packages/kit/test/apps/basics/src/routes/errors/page-endpoint/get-explicit/+page.server.js
import { error } from '@sveltejs/kit/data';
import { FancyError } from '../_shared.js';

export const GET = () => {
	throw error(400, new FancyError('oops'));
};
